# rrate-limiter

./: .dockerignore  ARCHITECTURE.md  Cargo.toml  Dockerfile.admin  Dockerfile.rate_limiter  README.md  compose.yaml  config_loader.Dockerfile  db.Dockerfile  db.sql  db_creation.sh  rules.example.yaml  watcher.Dockerfile
admin/: Cargo.toml  Dockerfile
admin/src/: db.rs  errors.rs  handlers.rs  main.rs  models.rs
config_loader/: Cargo.toml  config.example.json
config_loader/src/: main.rs
nginx/: nginx.conf
rate_limiter/: Cargo.toml  Dockerfile  load.lua
rate_limiter/src/: configurations_loader.rs  errors.rs  handler.rs  main.rs  rate_limiter.rs  rules.rs  server.rs  server_state.rs  utils.rs
rrl_core/: Cargo.toml
rrl_core/src/: db.rs  lib.rs  rate_limiter.rs  rules.rs
src/: errors.rs  main.rs  rate_limiter.rs  rules.rs  utils.rs
telemetry/: otel-config.yaml  prometheus.yml
telemetry/grafana-provisioning/dashboards/: rate_limiter.json
telemetry/grafana-provisioning/datasources/: prometheus.yaml
watcher/: Cargo.toml  config.yaml
watcher/src/: main.rs
