[package]
name = "admin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.41"
axum-macros = "0.5.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
tokio-postgres = "0.7.13"
