[package]
name = "admin"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.47.1", features = ["full"] }
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.41"
axum-macros = "0.5.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
tokio-postgres = {version="0.7.2", features=["with-uuid-1"]}

rrl_core ={ path = "../rrl_core"}
uuid = "1.18.0"
