[package]
name = "admin"
version = "0.1.0"
edition = "2024"

[dependencies]
rrl_core ={ path = "../rrl_core"}
tokio = { version = "1.47.1", features = ["full"] }
axum = "0.8.4"
axum-macros = "0.5.0"
thiserror = "2.0.12"
anyhow = "1.0.98"
serde = {version="1.0.219", features = ["derive"]}
matchit = "0.8.4"
