[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2024"


[dependencies]
matchit = "0.8.6" 
thiserror = "2.0.16"
anyhow = "1.0.100"
parking_lot = "0.12.4"
http-body-util = "0.1"
hyper-util = { version = "0.1.17", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
bytes = "1.10.1"
lazy_static = "1.5.0"
clap = { version = "4.5.48", features = ["derive"] }
serde = {version = "1.0.219", features = ["derive"]}
uuid = {version = "1.18.0", features = ["v4", "serde"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.41"
redis = {version = "0.32.5", features = ["connection-manager", "tokio-comp", "json"]}
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
serde_yaml = "0.9.34"