[package]
name = "rate-limiter"
version = "0.1.0"
edition = "2024"


[dependencies]
rrl_core ={ path = "../rrl_core"}
matchit = "0.8.6" 
thiserror = "2.0.16"
anyhow = "1.0.100"
parking_lot = "0.12.4"
http-body-util = "0.1"
hyper-util = { version = "0.1.17", features = ["full"] }
hyper = { version = "1.7.0", features = ["full"] }
bytes = "1.10.1"
lazy_static = "1.5.0"
clap = { version = "4.5.48", features = ["derive"] }
