[package]
name = "rrl_core"
version = "0.1.0"
edition = "2024"

[dependencies]
tokio-postgres = {version = "0.7.13", features = ["with-uuid-1", "with-chrono-0_4"]}
serde = {version = "1.0.219", features = ["derive"]}
uuid = {version = "1.18.0", features = ["v4", "serde"]}
chrono = {version = "0.4.41", features=["serde"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.41"
