[package]
name = "rrl_core"
version = "0.1.0"
edition = "2024"

[dependencies]

serde = {version = "1.0.219", features = ["derive"]}
uuid = {version = "1.18.0", features = ["v4", "serde"]}
tracing-subscriber = { version = "0.3.17", features = ["env-filter"] }
tracing = "0.1.41"
redis = {version = "0.32.5", features = ["connection-manager", "tokio-comp", "json"]}
serde_json = "1.0.145"
tokio = { version = "1.47.1", features = ["full"] }
